Cultibox (2.0.05) precise; urgency=low
    + Correction de la copie des fichiers templates sur la carte SD
    + Correction de la gestion des radios boutons des prises
    + Correction du chargement automatique des logs et de la fermeture de la fenêtre

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Oct 10 14:00:00 CEST 2014


Cultibox (2.0.04) precise; urgency=low
    + Remise en fonction des ancres
    + Affichage des messages d'utilisation du wizard dans la boite de message

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Oct 9 16:56:56 CEST 2014


Cultibox (2.0.03) precise; urgency=low
    + Correction de la page Configuration et du formatage de la carte SD
    + Correction de la page programme concernant les jeux de programmes dans les options avancées
    + Suppression des itérations de l'url localhost pour rendre le soft compatible avec le module wifi
    + Correction et vérification de l'écriture de la carte SD lors du changement de configuration (ajout des jeux de programme et du fichier plugidx)
    + Diverses correction pour stabiliser la 2.0.02

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Oct 1 10:10:26 CEST 2014


Cultibox (2.0.02) precise; urgency=low
    + Passage en AJAX des liens vers les pages depuis le msgbox
    + Passage en AJAX de l'export des logs
    + Passage de l'ajout/suppréssion d'une prise en AJAX (onglet programme)
    + Rechargement de la page configuration après sauvegarde ou formatage en AJAX
    + Correction de la detection des fichiers XML du calendrier
    + Correction de l'affichage des évènements XML externes
    + Procédure de suppréssion des requêttes AJAX en cours
    + Suppréssion de la couleur du graphe coût
    + Passage de la fréquence de changement des prises à 1 seconde par défaut
    + Passage de l'onglet programme en AJAX
    + Passage de l'onglet prise en AJAX
    + Passage de l'onglet Wizard en AJAX
    + Fusion des options de régulation secondaire et de régulation avançée