@@ -248,7 +248,20 @@ $(function () {
                             if (cheBu.attr("checked") == "checked") {
                             
                                 // Block interface
-                                $.blockUI({ message: ''});
+                                $.blockUI({ 
+                                    message: "<?php echo __('LOADING_DATA'); ?>  <img src=\"main/libs/img/waiting_small.gif\" />",
+                                    centerY: 0, 
+                                    css: { 
+                                        top: '20%',
+                                        border: 'none', 
+                                        padding: '5px', 
+                                        backgroundColor: 'grey', 
+                                        '-webkit-border-radius': '10px', 
+                                        '-moz-border-radius': '10px', 
+                                        opacity: .9, 
+                                        color: '#fffff' 
+                                    } 
+                                });
                                 
                                 // Call logs_get_serie to get programm value
                                 $.ajax({
@@ -919,7 +932,20 @@ $(document).ready(function() {
         }
 
         // Block interface
-        $.blockUI({ message: ''});
+        $.blockUI({ 
+            message: "<?php echo __('LOADING_DATA'); ?>  <img src=\"main/libs/img/waiting_small.gif\" />",
+            centerY: 0,
+            css: { 
+                top: '20%',
+                border: 'none',
+                padding: '5px',
+                backgroundColor: 'grey', 
+                '-webkit-border-radius': '10px',
+                '-moz-border-radius': '10px',
+                opacity: .9,
+                color: '#fffff'
+            }
+        });
 
         // If checked
         if (cheBu.attr("checked") == "checked") {
