@@ -303,7 +303,20 @@ $(document).ready(function(){
         if(checked) {
                 var check_update=true;
                 // block user interface during saving;
-                $.blockUI({ message: '', onBlock: function() {
+                $.blockUI({
+                  message: "<?php echo __('SAVING_DATA'); ?>  <img src=\"main/libs/img/waiting_small.gif\" />",
+                  centerY: 0,
+                  css: {
+                    top: '20%',
+                    border: 'none',
+                    padding: '5px',
+                    backgroundColor: 'grey',
+                    '-webkit-border-radius': '10px',
+                    '-moz-border-radius': '10px',
+                    opacity: .9,
+                    color: '#fffff'
+                  },
+                  onBlock: function() {
                     for(i=1;i<=nb_plugs;i++) {    
                         var data_array = {};
                         $("#state_plug"+i+" :input").each(function() {
